--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@ COMMON ISSUES:
                                     Sent by 
                                     <div class="inline-flex min-w-0 flex-nowrap items-center rounded betterhover:hover:bg-[#474f54] cursor-pointer transition-colors duration-150 ease-out active:bg-[#474f54AA]">
                                         <div class="flex items-center gap-1 self-center pr-1" id="user-badge-container"></div>
-                                        <button class="inline font-bold" id="sender" title="" style="">Unknown</button>
+                                        <button class="inline font-bold" id="sender" title="">Unknown</button>
                                     </div>
                                 </div>
                                 <div class="flex items-center gap-2">
