--- a/index.html
+++ b/index.html
@@ -698,7 +698,8 @@ COMMON ISSUES:
                 // Handle Unicode emojis - use Twemoji images for OBS compatibility
                 if (isOBS) {
                     // For OBS, convert emojis to Twemoji images for better compatibility
-                    const emojiRegex = /([\u{1F600}-\u{1F64F}]|[\u{1F300}-\u{1F5FF}]|[\u{1F680}-\u{1F6FF}]|[\u{2600}-\u{26FF}]|[\u{2700}-\u{27BF}]|[\u{1F900}-\u{1F9FF}]|[\u{2B50}\u{2764}\u{1F494}\u{1F48B}\u{1F525}\u{1F44D}\u{1F44E}\u{1F602}\u{1F914}\u{1F60D}\u{1F621}\u{1F622}\u{1F923}\u{1F970}])/gu;
+                    // Comprehensive emoji regex including all major Unicode blocks
+                    const emojiRegex = /([\u{1F000}-\u{1F02F}]|[\u{1F0A0}-\u{1F0FF}]|[\u{1F100}-\u{1F64F}]|[\u{1F680}-\u{1F6FF}]|[\u{1F700}-\u{1F77F}]|[\u{1F780}-\u{1F7FF}]|[\u{1F800}-\u{1F8FF}]|[\u{1F900}-\u{1F9FF}]|[\u{1FA00}-\u{1FA6F}]|[\u{1FA70}-\u{1FAFF}]|[\u{2600}-\u{26FF}]|[\u{2700}-\u{27BF}]|[\u{2B00}-\u{2BFF}]|[\u{3000}-\u{303F}]|[\u{1F1E6}-\u{1F1FF}])/gu;
                     
                     parsed = parsed.replace(emojiRegex, function(match) {
                         // Convert emoji to hex codepoint for Twemoji URL
