--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@ COMMON ISSUES:
         }
 
         #widget-container {
-            min-width: 0px;
+            min-width: 335px;
             max-width: 335px;
-            width: max-content;
+            width: 335px;
             min-height: 77px;
             position: fixed;
             top: 20px;
@@ -73,10 +73,10 @@ COMMON ISSUES:
             display: none !important;
         }
 
-        /* Make widget width dynamic by overriding w-full classes */
+        /* Make widget width consistent by overriding w-full classes */
         #pinned-container,
         #pinned-container .w-full {
-            width: auto !important;
+            width: 335px !important;
         }
 
         /* Ensure proper text wrapping for long messages with smooth transitions */
@@ -90,11 +90,29 @@ COMMON ISSUES:
             transition: width 0.4s ease-in-out, height 0.4s ease-in-out, padding 0.4s ease-in-out;
         }
 
-        /* Improve link wrapping - prevent links from breaking mid-URL */
+        /* Smart link wrapping - allow breaking for links over 50 characters */
         #message-content a {
+            display: inline;
+            color: #53fc18;
+            text-decoration: underline;
+            /* Use CSS to detect long links and allow breaking */
+            word-break: break-all;
+            overflow-wrap: break-word;
+            white-space: normal;
+        }
+
+        /* For shorter links, try to keep them intact when possible */
+        #message-content a[href*="://"]:not([href*="very-long-url-marker"]) {
             word-break: keep-all;
             white-space: nowrap;
-            display: inline;
+            overflow-wrap: normal;
+        }
+
+        /* Override for very long links - force breaking */
+        #message-content a.long-link {
+            word-break: break-all !important;
+            white-space: normal !important;
+            overflow-wrap: break-word !important;
         }
 
         /* Allow text after links to wrap normally */
@@ -102,8 +120,8 @@ COMMON ISSUES:
             word-break: break-word;
         }
 
-        /* Special handling for URLs and links to prevent awkward breaks */
-        #message-content a,
+        /* Remove the old restrictive link rules */
+        /* #message-content a,
         #message-content [href],
         #message-content .url,
         .link-no-break {
@@ -111,7 +129,7 @@ COMMON ISSUES:
             white-space: nowrap !important;
             overflow-wrap: normal !important;
             display: inline !important;
-        }
+        } */
 
         /* Allow the container to wrap more naturally */
         .flex-nowrap {
@@ -727,7 +745,11 @@ COMMON ISSUES:
                     let cleanUrl = match.replace(/[.,:;!?]$/, '');
                     let trailingPunc = match.length > cleanUrl.length ? match.slice(-1) : '';
                     
-                    return `<a href="${cleanUrl}" target="_blank" class="link-no-break" style="word-break: keep-all; white-space: nowrap; color: #53fc18;">${cleanUrl}</a>${trailingPunc}`;
+                    // Check if the link is over 50 characters
+                    const isLongLink = cleanUrl.length > 50;
+                    const linkClass = isLongLink ? 'long-link' : '';
+                    
+                    return `<a href="${cleanUrl}" target="_blank" class="${linkClass}" style="color: #53fc18;">${cleanUrl}</a>${trailingPunc}`;
                 });
 
                 // Second, replace [emote:ID:NAME] with actual emote images
